--- a/block/templates/block.html
+++ b/block/templates/block.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     {% load static %}
     <title></title>
+    <link rel="stylesheet" href='{% static "bootstrap-4.4.1-dist/css/bootstrap.min.css" %}'>
   </head>
   <body>
   <div class = "container" style="max-width:1000px">
@@ -21,14 +22,14 @@
               <input type="hidden" name="profile_urls" value="{{user}}">
             {% endfor %}
             {% endautoescape %}
-          <input type="button" onclick="document.forms[0].submit()"  value="Blocken"/>
+          <input class="btn btn-danger" type="button" onclick="document.forms[0].submit()" value="Blocken"/>
         </form>
       {% else %}
       <a href="/logout">Logout</a>
       <form action="{% url 'blocklists' %}" method="post">
         {% csrf_token %}
         <input type="url" name="url"></input>
-        <input type="button" onclick="document.forms[0].submit()"  value="Letzten 100 Retweeter Blocken"/>
+        <input onclick="document.forms[0].submit()" class="btn btn-danger" value="Letzten 100 Retweeter Blocken"/>
       </form>
       {% endif %}
     {% endif %}
