--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
-
+{% load static %}
 {% block title %}Ich bin hier Twittertools{% endblock %}
 
 {% block content %}
 {% if not request.session.OAUTH_TOKEN %}
+<p><div ><a href="{{ login_url }}"><button class="btn btn-primary"><img src='{% static "img/sign_in_with_twitter.png" %}'></button></a></div></p>
 <p>Wir speichern keine Daten bis auf die üblichen Server-Logfiles. <a href="https://www.salesforce.com/company/privacy/" target="_blank">Hier</a> finden sich Privacy-Informationen zum Hoster Heroku. </p>
 <p>Den Source-Code für diese Webanwendung findet man auf <a href="https://github.com/pkreissel/ichbinhier_twittertools" target="_blank">Github</a> </p>
 {% else %}
