--- a/login/templates/base.html
+++ b/login/templates/base.html
@@ -9,18 +9,33 @@
 </head>
 
 <body>
-  <div class="container-fluid" style="max-width:1000px; margin-top:30px">
-    <div class="row">
-      <div class="col-md-8">
-        <a href="/">Home</a> |
-        {% if not request.session.OAUTH_TOKEN %}
-        <a href="{{ login_url }}">Login</a>
-        {% else %}
-        <a href="{% url 'blocklists' %}">Blocklisten</a> |
-        <a href="/logout">Logout</a>
-        {% endif %}
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <!-- <a class="navbar-brand" href="#"></a> -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          {% if not request.session.OAUTH_TOKEN %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ login_url }}">Login</a>
+          </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'blocklists' %}">Blocklisten</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">Logout</a>
+          </li>
+          {% endif %}
+        </ul>
       </div>
-    </div>
+    </nav>
   </div>
   <div class="container-fluid" style="max-width:1000px; margin-top:50px">
     {% block content %}{% endblock %}
@@ -32,6 +47,6 @@
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
   integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="{% static " bootstrap-4.4.1-dist/js/bootstrap.min.js" %}></script>
+<script src='{% static "bootstrap-4.4.1-dist/js/bootstrap.min.js" %}'></script>
 
 </html>
