--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Ich bin hier Twittertools{% endblock %}
+{% block title %}Twittertools{% endblock %}
 
 {% block content %}
 <div class="row">
