--- a/verified_blocker/templates/verified.html
+++ b/verified_blocker/templates/verified.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% if request.session.OAUTH_TOKEN %}
-<form action="{% url 'blockapi' %}" method="post">
+<form action="{% url 'unfollow' %}" method="post">
   {% csrf_token %}
   <h2>User you follow who likely pay 8$ per month to Musk</h2>
   <div class="row">
